--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta name="theme-color" content="#1f2937">
+    <meta name="theme-color" media="(prefers-color-scheme: light)" content="#fefefe">
+    <meta name="theme-color" media="(prefers-color-scheme: dark)" content="#1f2937">
+    <meta name="color-scheme" content="light dark">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/26thumb.png" />
