revert last change

--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <script>
-      const meta = document.createElement('meta');
-      meta.name = 'theme-color';
-      meta.content = '#1f2937'; // background color
-      document.head.appendChild(meta);
-    </script>
+    <meta name="theme-color" content="#1f2937">
+    <meta name="color-scheme" content="light dark">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/26thumb.png" />
